--- a/app/src/main/res/layout/activity_player.xml
+++ b/app/src/main/res/layout/activity_player.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -12,12 +11,15 @@
         android:id="@+id/ivLogo"
         android:layout_width="match_parent"
         android:layout_height="500dp"
-        android:src="@drawable/logo" />
+        android:src="@drawable/logo"
+        android:contentDescription="@string/logo_descri"
+        android:background="@android:color/transparent" />
 
     <ImageButton
         android:id="@+id/ibPlayPause"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:src="@drawable/pause" />
+        android:src="@drawable/pause"
+        android:contentDescription="@string/play_pause_button"
+        android:background="@android:color/transparent" />
 </LinearLayout>
