--- a/app/src/main/res/layout/activity_player.xml
+++ b/app/src/main/res/layout/activity_player.xml
@@ -61,15 +61,33 @@
         android:text="@string/buffering"
         android:textAlignment="center"
         android:textSize="30sp"
-        android:visibility="invisible"/>
+        android:visibility="invisible" />
 
-    <ImageButton
-        android:id="@+id/ibPlayPause"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:layout_margin="20dp"
-        android:background="@android:color/transparent"
-        android:contentDescription="@string/play_pause_button"
-        android:scaleType="fitXY"
-        android:src="@drawable/pause" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:orientation="horizontal">
+
+        <ImageButton
+            android:id="@+id/ibStop"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:layout_margin="2dp"
+            android:background="@android:color/transparent"
+            android:contentDescription="@string/stop_button"
+            android:scaleType="fitXY"
+            android:src="@drawable/stop"
+            android:visibility="gone" />
+
+        <ImageButton
+            android:id="@+id/ibPlayPause"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:layout_margin="2dp"
+            android:background="@android:color/transparent"
+            android:contentDescription="@string/play_pause_button"
+            android:scaleType="fitXY"
+            android:src="@drawable/pause" />
+    </LinearLayout>
 </LinearLayout>
