--- a/app/src/main/res/layout/activity_player.xml
+++ b/app/src/main/res/layout/activity_player.xml
@@ -125,15 +125,16 @@
             android:onClick="pauseClicked"
             android:src="@drawable/pause" />
     </LinearLayout>
+
     <TextView
         android:id="@+id/tvCredits"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:gravity="center"
+        android:minHeight="48dp"
+        android:onClick="goToDeveloper"
         android:text="@string/producer"
         android:textAlignment="center"
-        android:textSize="12sp"
-        android:onClick="goToDeveloper"
-        android:layout_marginBottom="20dp"/>
+        android:textSize="14sp" />
 </RelativeLayout>
